@@ -750,3 +750,21 @@ class LoadJsonDirective(Directive):
         def load(request, json):
             return obj(json, request)
         registry.register(generic.load_json, (Request, object), load)
+
+
+@App.directive('link_prefix')
+class LinkPrefixDirective(Directive):
+    def __init__(self, app):
+        '''Register a function that returns the prefix added to every link
+        generated by the request.
+
+        The decorated function gets the ``request`` (:class:`morepath.Request`)
+        as its only paremeter. The function should return a string.
+        '''
+        super(LinkPrefixDirective, self).__init__(app)
+
+    def identifier(self, registry):
+        return ()
+
+    def perform(self, registry, obj):
+        registry.register(generic.link_prefix, (Request,), obj)
