@@ -130,3 +130,10 @@ def dump_json(request, obj):
     The return value is JSON-serialized.
     """
     return obj
+
+
+@reg.generic
+def link_prefix(request):
+    """Returns a prefix that's added to every link generated by the request.
+    """
+    return ''
