@@ -4,6 +4,9 @@ CHANGES
 0.8 (unreleased)
 ================
 
+- Introduce a ``link_request`` directive that allows to set the prefix used by
+  every link generated by the request.
+
 - One test did not work correctly in Python 3. Fixed.
 
 - Add API doc for ``body_obj``. Also fix JSON and objects doc to talk
